--- a/index.html
+++ b/index.html
@@ -298,6 +298,8 @@
                   <li class="list-group-item">"Creative Visionaries and Collaborative Partners"</li>
                   <li class="list-group-item">"Seamless Integration and Professionalism"</li>
                 </ul>
+               <br>
+                <p class="text-muted"> <i>For More Details, Please Contact Us..</i>
                  <button type="button" class="btn btn-info"><a href="contact-us.html">Contact Us</a></button>
               </div>
             </div>
