--- a/index.html
+++ b/index.html
@@ -219,9 +219,10 @@
           <div class="section-heading">
             <h4 class="about-head">Directors</h4>
             <!-- <h6>Know Us Better</h6> -->
-            <p class="about-label"><b>Mr. Arvind Kumar</b> </p>
-            <p class="about-label"><b>Mr. Ishant Bhardwaj</b></p>
-            <p class="about-label"><b>Mr. Priyanka Gautam</b></p>
+            <p class="about-label"><b>Mr. Nitesh Kumar</b> </p>
+            <p class="about-label"><b>Mr. Rajesh Verma</b></p>
+            <p class="about-label"><b>Mrs. Priyanka</b></p>
+            <p class="about-label"><b>Mr. Sujeet Kumar</b></p>
           </div>
         </div>
         <div class="container-fluid">
