--- a/about-us.html
+++ b/about-us.html
@@ -86,7 +86,7 @@
           <div class="">
             <div class="col">
               <h4>About Us</h4>
-              <h5><i>Directors: </i> Mr. Arvind Kumar | Mr. Ishant Bhardwaj | Mr. Priyanka Gautam</h5><br>
+              <h5><i>Directors: </i> Mr. Nitesh Kumar | Mr. Rajesh Verma | Mrs. Priyanka | Mr. Sujeet Kumar</h5><br>
               <p class="about-text">
                 Concrete Infra and Media Limited is a dynamic media and studio company that stands at the forefront of innovation and creativity in the entertainment industry. With a name evoking strength, stability, and solidity, the company is committed to building robust media infrastructure while fostering groundbreaking content creation.<br><br>
 
